# advent-of-code-2025

./: main.py  pyproject.toml
data/: day3.txt
src/aoc/: day1.py  day2.py  day3.py
src/aoc/shared/: parse_file.py
tests/: test_day1.py  test_day2.py  test_day3.py  test_parse_file.py
